# rs-spectrum

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-develop.yml  rust-doc.yml  rust-master.yml
rs-spectrum/: Cargo.toml
rs-spectrum/src/: main.rs
rspectrum/: Cargo.toml
rspectrum/src/: lib.rs
rz80/: Cargo.toml
rz80/src/: alu.rs  carry_borrow.rs  decode.rs  execute.rs  hi_lo.rs  insts.rs  lib.rs
rz80/src/decode/: arith8.rs  exchange.rs  jump.rs  load8.rs
rz80/src/execute/: arith8.rs  exchange.rs  jump.rs  load8.rs
src/: lib.rs  main.rs
src/z80/: decode.rs  execute.rs  insts.rs  mod.rs
src/z80/decode/: arith8.rs  exchange.rs  jump.rs  load8.rs
src/z80/execute/: arith8.rs  exchange.rs  jump.rs  load8.rs
