[package]
name = "rs-spectrum"
version = "0.1.0"
edition = "2021"

authors = ["Ian Knight <ian.knight.1990@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nottsknight/rs-spectrum"
license = "MIT"

categories = ["emulators"]

[lib]
name = "spectrum"

[dev-dependencies]
rstest = "0.18.2"

[dependencies]
byteorder = "1.5.0"
