[package]
name = "rs-spectrum"
description = "Application providing an emulated ZX Spectrum computer"
version = "0.1.0"
edition = "2021"

authors.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rspectrum = { path = "../rspectrum" }
