[package]
name = "rspectrum"
description = "Library providing an emulated ZX Spectrum"
version = "0.1.0"
edition = "2021"

authors.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rz80 = { path = "../rz80" }

[dev-dependencies]
rstest = "0.18.2"

