[package]
name = "rz80"
description = "Library providing an emulated Zilog Z80 CPU"
version = "0.1.0"
edition = "2021"

authors.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
byteorder = "1.5.0"

[dev-dependencies]
rstest = "0.18.2"
